Closed
Bug 69798
Opened 24 years ago
Closed 24 years ago
crash on sending mail message
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: tracy, Assigned: darin.moz)
Details
(Keywords: smoketest)
Attachments
(2 files)
|
31.76 KB,
text/plain
|
Details | |
|
1018 bytes,
patch
|
Details | Diff | Splinter Review |
seen on linux commercial build 2001-02-0-22-04-trunk
-compose a mail message from pop or imap account
-send the message
crash everytime....and the message is not sent.
Comment 1•24 years ago
|
||
Do you have some kind of stack-trace or something we can look at?
| Reporter | ||
Comment 2•24 years ago
|
||
if you tell me how to get that on the mac..I'll gladly reproduce it for ya.
Comment 3•24 years ago
|
||
Tracy: you'd need macsbug to get the stack trace (downloadable from
developer.apple.com)
I can't reproduce this in my Mac debug mozilla build from this morning. However,
I didn't clobber my dist so...
Comment 4•24 years ago
|
||
???
Linux build on MacOS? LinuxPPC you mean?
Anyways, it is WFM in 022204 trunk build for MacOS.
| Reporter | ||
Comment 5•24 years ago
|
||
i'm right in the middle of some browser performance testing on the mac smoketest
machine. when it is finished jj is going help me get a copy of the debugger on
the machine and then we'll get a stack stacktrace posted.
Comment 6•24 years ago
|
||
In the meanwhile, here's mine:
Calling chain using A6/R1 links
Back chain ISA Caller
00000000 PPC 2006AAE8
0C5B0EC0 PPC 2004ABC8 main+001AC
0C5B0E60 PPC 20047F34 main1(int, char**, nsISupports*)+00830
0C5B0C00 PPC 1F68DED4 nsAppShellService::Run()+00054
0C5B0BB0 PPC 1F630DAC nsAppShell::Run()+0004C
0C5B0B70 PPC 1F6316A0 nsMacMessagePump::DoMessagePump()+00044
0C5B0B20 PPC 1F631EDC nsMacMessagePump::DispatchEvent(int,
EventRecord*)+001B0
0C5B0AD0 PPC 1F651B20 Repeater::DoRepeaters(const EventRecord&)+0003C
0C5B0A80 PPC 1F614454 nsMacNSPREventQueueHandler::RepeatAction(const
EventRecord&)+00014
0C5B0A40 PPC 1F614700 nsMacNSPREventQueueHandler::ProcessPLEventQueue()+00244
0C5B09A0 PPC 1F78E41C nsEventQueueImpl::ProcessPendingEvents()+00068
0C5B0930 PPC 1F7FF868 PL_ProcessPendingEvents+000AC
0C5B08E0 PPC 1F7FFABC PL_HandleEvent+00054
0C5B08A0 PPC 1ECC3BC8 nsStreamObserverEvent::HandlePLEvent(PLEvent*)+0004C
0C5B0860 PPC 1ECC20A8 nsOnDataAvailableEvent::HandleEvent()+002D0
0C5B07E0 PPC 1C739D38 nsMsgProtocol::OnDataAvailable(nsIRequest*,
nsISupports*, nsIInputStream*, unsigned int, unsigned int)+00084
0C5B0780 PPC 1C6D6714 nsSmtpProtocol::ProcessProtocolState(nsIURI*,
nsIInputStream*, unsigned int, unsigned int)+00174
Return addresses on the stack
Stack Addr Frame Addr ISA Caller
0C5B0A48 PPC 1F614454
nsMacNSPREventQueueHandler::RepeatAction(const EventRecord&)+00014
0C5B0A24 68K 00471B98 'scod BFAF 0002'+05B78
0C5B0A00 68K 0BC01B4E
0C5B09D4 68K 00471B98 'scod BFAF 0002'+05B78
0C5B09A8 0C5B09A0 PPC 1F614700
nsMacNSPREventQueueHandler::ProcessPLEventQueue()+00244
0C5B0968 0C5B0960 PPC 1F78D574 nsEventQueueImpl::Release()+00058
0C5B0938 0C5B0930 PPC 1F78E41C
nsEventQueueImpl::ProcessPendingEvents()+00068
0C5B0918 0C5B0910 PPC 1F773648 nsQueryInterface::operator()(const
nsID&, void**) const+00040
0C5B08F8 0C5B08F0 PPC 1F7FFFA8 PL_IsQueueOnCurrentThread+00014
0C5B08E8 0C5B08E0 PPC 1F7FF868 PL_ProcessPendingEvents+000AC
0C5B08B8 0C5B08B0 PPC 1F78D7F4 nsEventQueueImpl::QueryInterface(const
nsID&, void**)+001F0
0C5B08A8 0C5B08A0 PPC 1F7FFABC PL_HandleEvent+00054
0C5B0898 0C5B0890 PPC 1F7FF31C PL_GetEvent+000C8
0C5B0878 0C5B0870 PPC 1F78D4C8 nsEventQueueImpl::AddRef()+0005C
0C5B0868 68K 1ECC3BCA
nsStreamObserverEvent::HandlePLEvent(PLEvent*)+0004E
0C5B07E8 0C5B07E0 PPC 1ECC20A8
nsOnDataAvailableEvent::HandleEvent()+002D0
0C5B0792 PPC 07E00BE0
0C5B0788 0C5B0780 PPC 1C739D38
nsMsgProtocol::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*,
unsigned int, unsigned int)+00084
0C5B0738 0C5B0730 PPC 1C6CC104
0C5B06F8 0C5B06F0 PPC 1C6D6714
nsSmtpProtocol::ProcessProtocolState(nsIURI*, nsIInputStream*, unsigned int,
unsigned int)+00174
0C5B0688 0C5B0680 PPC 1C6D2E98
nsSmtpProtocol::SmtpResponse(nsIInputStream*, unsigned int)+001D0
0C5B0658 0C5B0650 PPC 1C6D3E80 nsSmtpProtocol::SendTLSResponse()+000AC
Since it happens for me, I'll take a look.
Comment 7•24 years ago
|
||
At this point:
http://lxr.mozilla.org/seamonkey/source/mailnews/compose/src/nsSmtpProtocol.cpp#767,
channel is NULL. Since there's no NULL check we die. Why it is NULL ??
cc'ing dougt
Updated•24 years ago
|
Assignee: sspitzer → dougt
Comment 8•24 years ago
|
||
It shouldn't be null! this request should be a channel as well. I will start
digging. Conrad, if you are still looking at this, take a look at what object
implements that request coming in. Make sure that it's QI impl has a nsIChannel
.
sspitzer, I am taking this from you cause it probably my problem.
| Assignee | ||
Comment 9•24 years ago
|
||
m_request is a nsITransportRequest not a nsIChannel!
| Assignee | ||
Comment 10•24 years ago
|
||
There are a number of places in mailnews where we incorrectly treat m_request
as a nsIChannel:
mailnews/compose/src/nsSmtpProtocol.cpp (this bug)
mailnews/local/src/nsMailboxProtocol.cpp (same problem)
Comment 11•24 years ago
|
||
| Reporter | ||
Comment 12•24 years ago
|
||
that was actually me with the attachment on the smoketest machine...not sure why
jrgm was logged in here.
| Assignee | ||
Comment 13•24 years ago
|
||
| Assignee | ||
Comment 15•24 years ago
|
||
Fix checked in. Marking FIXED. Adding keyword verifyme.
| Reporter | ||
Comment 16•24 years ago
|
||
also seeing this on windows 2001-02-22-10-mtrunk
I think ths build was started before the fix found
| Reporter | ||
Comment 17•24 years ago
|
||
verified fixed on commercial builds:
windows 2001-02-26-06-mtrunk
mac 2001-02-26-08-trunk
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•