Fixes bug 69798.  Crash on sending TLS mail message.  r=darin, sr=dougt.